--- a/client/src/app/partials/header/header.pug
+++ b/client/src/app/partials/header/header.pug
@@ -3,6 +3,6 @@
         p.title DILLON HALL WOODWORKS
         .menu-bar
             p
-                a(routerLink="/", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}") CREATIONS
-                a(routerLink="/about", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}") ABOUT
-                a(routerLink="/contact", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}") CONTACT
+                a(routerLink="/", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) CREATIONS
+                a(routerLink="/about", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) ABOUT
+                a(routerLink="/contact", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) CONTACT
