--- a/client/src/app/partials/header/header.pug
+++ b/client/src/app/partials/header/header.pug
@@ -1,6 +1,6 @@
 .header
     .container
-        p.title DILLON HALL WOODWORKS
+        p.title DILLON HALL BOARDS
         .menu-bar
             p
                 a(routerLink="/", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) CREATIONS
