--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -16,6 +16,7 @@ html(lang="en")
 
         script(src=`/node_modules/@babel/polyfill/dist/polyfill.min.js?${timestamp}`)
         script(src=`/node_modules/zone.js/dist/zone.min.js?${timestamp}`)
+        script(src="https://www.instagram.com/embed.js" async defer)
 
         block scripts
 
