--- a/client/src/app/creations/creations.pug
+++ b/client/src/app/creations/creations.pug
@@ -1,8 +1,6 @@
 .container
     .row
-        .col-sm-9.mx-auto
-            .row.align-items-start
-                .col-sm-4(*ngFor="let creation of creations; let i = index")
-                    .creation(routerLink="/creations/{{creations.length - i - 1}}", skipLocationChange)
-                        img([src]="creation.imgs[0]")
-                        p.title {{creation.title}}
+        .col-sm-11.mx-auto
+            .row.d-flex.justify-content-around
+                .col-sm-5(*ngFor="let embed of igEmbedList")
+                    .creation([innerHtml]="embed")
