replace polyfill with corejs

--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(name="description" content="Crafting goodness.")
         meta(name="viewport" content="width=device-width, initial-scale=0.8")
         base(href="/")
-        title Dillon Hall Woodworks
+        title Dillon Hall Boards
         //- link(rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico")
         link(href="/node_modules/typeface-nunito-sans/index.css" rel="stylesheet")
         link(href=`/node_modules/bootstrap/dist/css/bootstrap.min.css?${timestamp}` rel="stylesheet")
@@ -14,9 +14,7 @@ html(lang="en")
     body
         block content
 
-        script(src=`/node_modules/@babel/polyfill/dist/polyfill.min.js?${timestamp}`)
         script(src=`/node_modules/zone.js/dist/zone.min.js?${timestamp}`)
-        script(src="https://www.instagram.com/embed.js" async defer)
 
         block scripts
 
