--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -6,7 +6,7 @@ html(lang="en")
         meta(name="viewport" content="width=device-width, initial-scale=0.8")
         base(href="/")
         title Dillon Hall Boards
-        //- link(rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico")
+        link(rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico")
         link(href="/node_modules/typeface-nunito-sans/index.css" rel="stylesheet")
         link(href=`/node_modules/bootstrap/dist/css/bootstrap.min.css?${timestamp}` rel="stylesheet")
         link(href=`/node_modules/@fortawesome/fontawesome-free/css/all.min.css?${timestamp}` rel="stylesheet")
