--- a/client/src/app/creations/creations.pug
+++ b/client/src/app/creations/creations.pug
@@ -4,4 +4,4 @@
             .row.d-flex.align-items-start
                 .col-md-4.col-sm-6(*ngFor="let url of igUrls")
                     a.creation(target="_blank", rel="noreferrer", href="{{url}}")
-                        img([src]="url + '/media/?size=m'")
+                        img([src]="url + '/media?size=m'")
