--- a/client/src/app/creations/creations.pug
+++ b/client/src/app/creations/creations.pug
@@ -2,6 +2,6 @@
     .row
         .col-sm-10.mx-auto
             .row.d-flex.align-items-start
-                .col-md-4.col-sm-6(*ngFor="let url of igUrls")
-                    a.creation(target="_blank", rel="noreferrer", href="{{url}}")
-                        img([src]="url + '/media?size=m'")
+                .col-md-4.col-sm-6(*ngFor="let id of igIds")
+                    a.creation(target="_blank", rel="noreferrer", href="{{toIgUrl(id)}}")
+                        img([src]="cacheService.getImgSrc(id, toIgUrl(id)) | async")
