--- a/client/src/app/about/about.less
+++ b/client/src/app/about/about.less
@@ -1,9 +1,15 @@
-.profile {
-    border-radius: 50%;
-    height: 250px;
-    width: 250px;
-    max-width: 100%;
+a {
+    display: inline-block;
     margin-bottom: 55px;
+    border-radius: 50%;
+    .profile {
+        border-radius: 50%;
+        height: 250px;
+        width: 250px;
+        max-width: 100%;
+        position: relative;
+        overflow: hidden;
+    }
 }
 
 .desc {
