--- a/client/src/app/about/about.pug
+++ b/client/src/app/about/about.pug
@@ -2,6 +2,7 @@
     .row
         .col-sm-9.col-md-6.mx-auto
             .center
-                img.image-cropper.profile([src]="cacheService.getImgSrc('B6CvzAsHZSB', toIgUrl('B6CvzAsHZSB')) | async")
+                a([href]="images[0].getPostUrl()", target="_blank", rel="noreferrer")
+                    img.profile([src]="images[0].src", *ngIf="images[0].src != null")
             p.desc Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             p.desc Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui ut ornare lectus sit amet est placerat in egestas. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus.
