--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -5,6 +5,7 @@
 @error-color: #F44040;
 @success-color: #00C759;
 @background-color: #2D2D2D;
+@title-color: #121212;
 
 @container-width: 960px;
 @screen-xl-min: 1200px;
