--- a/client/src/app/creations/creations.less
+++ b/client/src/app/creations/creations.less
@@ -13,3 +13,13 @@
         height: auto;
     }
 }
+
+.spinner-ctnr {
+    padding-left: 20px;
+    padding-top: 30px;
+    text-align: center;
+    .fa-yin-yang {
+        color: @title-color;
+        font-size: 90px;
+    }
+}
