--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -5,7 +5,7 @@
         padding: 70px 0 55px;
         font-size: 50px;
         font-weight: @font-weight-bold;
-        color: #121212;
+        color: @title-color;
         text-align: center;
         @media(max-width: @screen-xs-max) {
             font-size: 40px;
