--- a/client/src/app/creations/creations.pug
+++ b/client/src/app/creations/creations.pug
@@ -1,7 +1,8 @@
 .container
     .row
         .col-sm-10.mx-auto
-            .row.d-flex.align-items-start
+            .row(*ngIf="showSpinner"): .col-12: .spinner-ctnr: .fas.fa-yin-yang.fa-spin
+            .row.d-flex.align-items-start(*ngIf="!showSpinner")
                 .col-md-4.col-sm-6(*ngFor="let img of images")
                     a.creation([href]="img.getPostUrl()", target="_blank", rel="noreferrer")
                         img([src]="img.src", *ngIf="img.src != null")
