--- a/client/src/app/creations/creations.less
+++ b/client/src/app/creations/creations.less
@@ -23,3 +23,13 @@
         font-size: 90px;
     }
 }
+
+.creations-row {
+    padding-top: 30px;
+    opacity: 0;
+    transition: padding-top 500ms, opacity 500ms;
+    &.active {
+        padding-top: 0;
+        opacity: 1;
+    }
+}
