--- a/client/src/app/contact/contact.pug
+++ b/client/src/app/contact/contact.pug
@@ -6,9 +6,9 @@
                     .col-lg-6
                         .contact-link
                             .fas.fa-envelope
-                            a(href="mailto:dillonhall@gmail.com") dillonhall@gmail.com
+                            a(href="mailto:surfthecurlll@yahoo.com") surfthecurlll@yahoo.com
                     .col-lg-6
                         .contact-link
                             .fas.fa-phone
                             a(href="tel:+17146766843") (714) 676-6843
-            p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo vel orci porta non pulvinar neque laoreet suspendisse interdum. Neque convallis a cras semper auctor neque vitae tempus.
+            //- p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo vel orci porta non pulvinar neque laoreet suspendisse interdum. Neque convallis a cras semper auctor neque vitae tempus.
