--- a/client/src/app/partials/header/header.pug
+++ b/client/src/app/partials/header/header.pug
@@ -4,5 +4,5 @@
         .menu-bar
             p
                 a(routerLink="/", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) CREATIONS
-                a(routerLink="/about", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) ABOUT
+                a(routerLink="/about", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) STORY
                 a(routerLink="/contact", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) CONTACT
