--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -1,11 +1,14 @@
-@font-color: #424242;
+// rgb(255, 233, 227)
+// rgb(255, 214, 178)
+// rgb(255, 243, 243)
+@font-color: #ffe9e3;
 @primary-color: #9900ff;
 @secondary-color: #0092ff;
 @tertiary-color: #94c5ff;
 @error-color: #F44040;
 @success-color: #00C759;
-@background-color: #2D2D2D;
-@title-color: #121212;
+@background-color: #222222;
+@title-color: @font-color;
 
 @container-width: 960px;
 @screen-xl-min: 1200px;
@@ -21,3 +24,8 @@
 @font-weight-regular: 400;
 @font-weight-semibold: 600;
 @font-weight-bold: 700;
+
+@font-face {
+    font-family: Blackletter;
+    src: url("/old-english-regular.otf") format("opentype");
+}
