--- a/client/less/common.less
+++ b/client/less/common.less
@@ -1,5 +1,5 @@
 html, body {
-    font-family: 'Blackletter', sans-serif;
+    font-family: 'Same Old English', sans-serif;
     font-weight: @font-weight-regular;
     font-size: 16px;
     color: @font-color;
