--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -26,6 +26,7 @@
 @font-weight-bold: 700;
 
 @font-face {
-    font-family: Blackletter;
-    src: url("/old-english-regular.otf") format("opentype");
-}
+    font-family: "Same Old English";
+    src: url("/fonts/same-old-english.woff2") format("woff2"),
+         url("/fonts/same-old-english.woff") format("woff");
+  }
