--- a/client/src/app/partials/header/header.pug
+++ b/client/src/app/partials/header/header.pug
@@ -1,8 +1,8 @@
 .header
     .container
-        p.title DILLON HALL BOARDS
+        p.title Dillon Hall Boards
         .menu-bar
             p
-                a(routerLink="/", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) CREATIONS
-                a(routerLink="/about", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) STORY
-                a(routerLink="/contact", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) CONTACT
+                a(routerLink="/", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) Creations
+                a(routerLink="/about", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) Story
+                a(routerLink="/contact", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}", skipLocationChange) Contact
