--- a/client/src/app/creations/creations.pug
+++ b/client/src/app/creations/creations.pug
@@ -1,8 +1,9 @@
 .container
     .row
         .col-sm-10.mx-auto
-            .row(*ngIf="showSpinner"): .col-12: .spinner-ctnr: .fas.fa-yin-yang.fa-spin
-            .row.d-flex.align-items-start.creations-row(*ngIf="!showSpinner", [class.active]="active")
+            img(src="/img/8241.jpeg" style="width: 100%; height: auto")
+            //- .row(*ngIf="showSpinner"): .col-12: .spinner-ctnr: .fas.fa-yin-yang.fa-spin
+            //- .row.d-flex.align-items-start.creations-row(*ngIf="!showSpinner", [class.active]="active")
                 .col-md-4.col-sm-6(*ngFor="let img of images")
                     a.creation([href]="img.getPostUrl()", target="_blank", rel="noreferrer")
                         img([src]="img.src", *ngIf="img.src != null")
