--- a/client/src/app/creations/creations.pug
+++ b/client/src/app/creations/creations.pug
@@ -1,7 +1,7 @@
 .container
     .row
-        .col-sm-10.mx-auto
-            img(src="/img/8241.jpeg" style="width: 100%; height: auto")
+        .col-sm-10.mx-auto.center
+            img(src="/img/8241.jpeg" style="width: 100%; height: auto; max-width: 450px")
             //- .row(*ngIf="showSpinner"): .col-12: .spinner-ctnr: .fas.fa-yin-yang.fa-spin
             //- .row.d-flex.align-items-start.creations-row(*ngIf="!showSpinner", [class.active]="active")
                 .col-md-4.col-sm-6(*ngFor="let img of images")
