--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -8,8 +8,9 @@
         color: @title-color;
         text-align: center;
         @media(max-width: @screen-xs-max) {
-            font-size: 60px;
-        }
+            font-size: 68px;
+            padding: 50px 0 40px;
+    }
     }
     .menu-bar {
         margin-bottom: 55px;
