--- a/client/src/app/partials/header/header.pug
+++ b/client/src/app/partials/header/header.pug
@@ -1,18 +1,15 @@
 .header
     .container
-        p.title Dillon Hall Boards
+        p.title: span(routerLink="/") Dillon Hall Boards
         .menu-bar
             .row
                 .col-lg-8.col-md-10.col-sm-12.mx-auto
                     .row
-                        .col-sm-3
-                            p: a(routerLink="/", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}") Street
-                        .col-sm-3
-                            p: a(routerLink="/ocean", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}") Ocean
-                        .col-sm-3
+                        .col-4
+                            p: a(routerLink="/skateboards", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}") Skateboards
+                        .col-4
                             p: a(routerLink="/pinstriping", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}") Pinstriping
-                        .col-sm-3
+                        //- .col-4
+                        //-     p: a(routerLink="/story", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}") Story
+                        .col-4
                             p: a(routerLink="/contact", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}") Contact
-                    //- .row
-                        //- .col-sm-4
-                        //-     p: a(routerLink="/history", routerLinkActive="active", [routerLinkActiveOptions]="{exact: true}") History
