--- a/client/src/app/skateboards/skateboards.less
+++ b/client/src/app/skateboards/skateboards.less
@@ -1,5 +1,19 @@
 @import "less/variables.less";
 
+.desc {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 45px;
+}
+
+.col-4 {
+    margin-bottom: 30px;
+    img {
+        width: 100%;
+        height: auto;
+    }
+}
+
 .creation {
     padding: 10px;
     cursor: pointer;
