--- a/client/src/app/story/story.pug
+++ b/client/src/app/story/story.pug
@@ -1,7 +1,7 @@
 .container
     .row
         .col-sm-9.col-md-6.mx-auto
-            img(src="/img/8242.jpeg" style="width: 100%; height: auto")
+            img(src="/img/8242.jpg" style="width: 100%; height: auto")
             //- .center
                 //- a([href]="images[0].getPostUrl()", target="_blank", rel="noreferrer")
                 //-     img.profile([src]="images[0].src", *ngIf="images[0].src != null")
