--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -4,8 +4,11 @@
     .title {
         padding: 70px 0 55px;
         font-size: 78px;
-        color: @title-color;
         text-align: center;
+        cursor: default;
+        span {
+            outline: none;
+        }
         @media(max-width: @screen-xs-max) {
             font-size: 68px;
             padding: 50px 0 40px;
