--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -10,10 +10,9 @@
     }
 }
 
-.jay-adams-ctnr {
-    img {
-        width: 100%;
-        height: auto;
-        filter: brightness(70%);
-    }
+img {
+    width: 100%;
+    height: auto;
+    filter: brightness(80%);
+    max-width: 1200px;
 }
