--- a/client/src/app/skateboards/skateboards.less
+++ b/client/src/app/skateboards/skateboards.less
@@ -6,41 +6,49 @@
     margin-bottom: 45px;
 }
 
-.col-4 {
-    margin-bottom: 30px;
-    img {
-        width: 100%;
-        height: auto;
+.imgs {
+    .row {
+        margin-left: -7.5px;
+        margin-right: -7.5px;
+        div[class^="col-"] {
+            margin-bottom: 15px;
+            padding-left: 7.5px;
+            padding-right: 7.5px;
+        }
+        img {
+            width: 100%;
+            height: auto;
+        }
     }
 }
 
-.creation {
-    padding: 10px;
-    cursor: pointer;
-    outline: 0;
-    display: block;
-    img {
-        width: 100%;
-        height: auto;
-    }
-}
+// .creation {
+//     padding: 10px;
+//     cursor: pointer;
+//     outline: 0;
+//     display: block;
+//     img {
+//         width: 100%;
+//         height: auto;
+//     }
+// }
 
-.spinner-ctnr {
-    padding-left: 20px;
-    padding-top: 40px;
-    text-align: center;
-    .fa-yin-yang {
-        color: @title-color;
-        font-size: 90px;
-    }
-}
+// .spinner-ctnr {
+//     padding-left: 20px;
+//     padding-top: 40px;
+//     text-align: center;
+//     .fa-yin-yang {
+//         color: @title-color;
+//         font-size: 90px;
+//     }
+// }
 
-.creations-row {
-    padding-top: 30px;
-    opacity: 0;
-    transition: padding-top 500ms, opacity 500ms;
-    &.active {
-        padding-top: 0;
-        opacity: 1;
-    }
-}
+// .creations-row {
+//     padding-top: 30px;
+//     opacity: 0;
+//     transition: padding-top 500ms, opacity 500ms;
+//     &.active {
+//         padding-top: 0;
+//         opacity: 1;
+//     }
+// }
