--- a/client/less/common.less
+++ b/client/less/common.less
@@ -82,3 +82,13 @@ input {
         background-color: darken(@primary-color, 10%);
     }
 }
+
+.spinner-ctnr {
+    padding-left: 20px;
+    padding-top: 40px;
+    text-align: center;
+    .fa-yin-yang {
+        color: @title-color;
+        font-size: 90px;
+    }
+}
