--- a/client/src/app/skateboards/skateboards.pug
+++ b/client/src/app/skateboards/skateboards.pug
@@ -1,10 +1,11 @@
 .container
     //- p.desc Handshaped. One of a kind.
-    .imgs
+    .row(*ngIf="isLoading"): .col-12: .spinner-ctnr: .fas.fa-yin-yang.fa-spin
+    .imgs([class.active]="!isLoading")
         .row
-            div(*ngFor="let i of imgIndices", [ngClass]="{'col-4': activeIndex != i, 'col-12': activeIndex == i}", (click)="onImgClick(i)")
-                img([src]="'/img/skateboards/sb' + i + '.jpg'")
-                //- .row(*ngIf="showSpinner"): .col-12: .spinner-ctnr: .fas.fa-yin-yang.fa-spin
+            div(*ngFor="let src of imgSrcs; let i = index", [ngClass]="{'col-4': activeIndex != i, 'col-12': activeIndex == i}", (click)="onImgClick(i)")
+                img([src]="src")
+                //- img([src]="'/img/skateboards/sb' + i + '.jpg'")
                 //- .row.d-flex.align-items-start.creations-row(*ngIf="!showSpinner", [class.active]="active")
                     .col-md-4.col-sm-6(*ngFor="let img of images")
                         a.creation([href]="img.getPostUrl()", target="_blank", rel="noreferrer")
