--- a/client/src/app/pinstriping/pinstriping.pug
+++ b/client/src/app/pinstriping/pinstriping.pug
@@ -1,4 +1,7 @@
 .container
-    .row
-        .col-sm-10.mx-auto.center
-            img(src="/img/8244.jpg" style="width: 100%; height: auto; max-width: 450px")
+    //- p.desc Handshaped. One of a kind.
+    .row(*ngIf="isLoading"): .col-12: .spinner-ctnr: .fas.fa-yin-yang.fa-spin
+    .imgs([class.active]="!isLoading")
+        .row
+            div(*ngFor="let src of imgSrcs; let i = index", [ngClass]="{'col-4': activeIndex != i, 'col-12': activeIndex == i}", (click)="onImgClick(i)")
+                img([src]="src")
