--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -15,13 +15,13 @@
         }
     }
     .menu-bar {
-        margin-bottom: 55px;
+        margin-bottom: 75px;
         text-align: center;
         @media(max-width: @screen-xs-max) {
-            margin-bottom: 30px;
+            margin-bottom: 60px;
         }
         p {
-            margin-bottom: 25px;
+            // margin-bottom: 25px;
             a {
                 font-size: 22px;
                 color: @font-color;
