--- a/client/src/app/skateboards/skateboards.pug
+++ b/client/src/app/skateboards/skateboards.pug
@@ -1,7 +1,7 @@
 .container
     .row(*ngIf="isLoading"): .col-12: .spinner-ctnr: .fas.fa-yin-yang.fa-spin
     .imgs([class.active]="!isLoading")
-        p.desc Tried and true skateboards made by hand
+        p.desc Made by hand. Ready to ride.
         .row
             div(*ngFor="let src of imgSrcs; let i = index", [ngClass]="{'col-4': activeIndex != i, 'col-12': activeIndex == i}", (click)="onImgClick(i)")
                 img([src]="src")
